--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,11 @@ name: Go
 on:
   push:
     branches: [ "main" ]
+    paths: '**.go'
   pull_request:
     branches: [ "main" ]
   release:
-    types: [prereleased, created]
+    types: [created]
 
 jobs:
 
